// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/App/actions/addElectrum should addElectrum should create addElectrum action 1`] = `
Object {
  "payload": Object {
    "coin": "BEER",
    "txversion": 4,
    "urls": Array [
      "electrum1.cipig.net:10024",
      "electrum2.cipig.net:10024",
    ],
  },
  "type": "atomicapp/App/ELECTRUM_ADD",
}
`;

exports[`containers/App/actions/addElectrumError should addElectrumError should create addElectrumError action 1`] = `
Object {
  "error": Object {
    "context": Object {
      "action": "atomicapp/App/ELECTRUM_ADD",
      "params": Object {
        "active": 1,
        "asset": "PIZZA",
        "coin": "PIZZA",
        "market_cap": -2,
        "name": "Pizza",
        "rpcport": 11608,
        "txversion": 4,
        "urls": Array [
          "electrum1.cipig.net:10024",
          "electrum2.cipig.net:10024",
        ],
      },
    },
    "message": "can't connect to electrum server",
    "type": "RPC",
  },
  "type": "atomicapp/App/ELECTRUM_ADD_ERROR",
}
`;

exports[`containers/App/actions/addElectrumSuccess should addElectrumSuccess should create addElectrumSuccess action 1`] = `
Object {
  "payload": Object {
    "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
    "balance": 6502.66989074,
    "coin": "BEER",
    "fee": 0.00001,
  },
  "type": "atomicapp/App/ELECTRUM_ADD_SUCCESS",
}
`;

exports[`containers/App/actions/loadAllBalance should loadAllBalance should create loadAllBalance action 1`] = `
Object {
  "type": "atomicapp/App/BALANCE_LOAD_ALL",
}
`;

exports[`containers/App/actions/loadBalance should loadBalance should create loadBalance action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
  },
  "type": "atomicapp/App/BALANCE_LOAD",
}
`;

exports[`containers/App/actions/loadBalanceError should loadBalanceError should create loadBalanceError action 1`] = `
Object {
  "error": Object {
    "context": Object {
      "action": "atomicapp/App/BALANCE_LOAD",
      "params": Object {
        "coin": "PIZZA",
      },
    },
    "message": "can't connect to electrum server",
    "type": "RPC",
  },
  "type": "atomicapp/App/BALANCE_LOAD_ERROR",
}
`;

exports[`containers/App/actions/loadBalanceSuccess should loadBalanceSuccess should create loadBalanceSuccess action 1`] = `
Object {
  "payload": Object {
    "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
    "balance": 6502.66989074,
    "coin": "BEER",
    "fee": 0.00001,
  },
  "type": "atomicapp/App/BALANCE_LOAD_SUCCESS",
}
`;

exports[`containers/App/actions/loadElectrums should loadElectrums should create loadElectrums action 1`] = `
Object {
  "type": "atomicapp/App/ELECTRUM_LOAD",
}
`;

exports[`containers/App/actions/login should login should create login action 1`] = `
Object {
  "payload": Object {
    "passphrase": "passphrase",
  },
  "type": "atomicapp/App/LOGIN",
}
`;

exports[`containers/App/actions/logout should logout should create logout action 1`] = `
Object {
  "type": "atomicapp/App/LOGOUT",
}
`;
